--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Bookshelf</h1>
-    <h1>UPDATE</h1>
+    <h1>UPDAT</h1>
     <br/>
     <div id="bookshelve">
     </div>
